--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,89 +1,88 @@
 <resources>
-    <string name="app_name">我的番茄钟</string>
+    <string name="app_name">My tomato clock</string>
     <!-- menu -->
-    <string name="nav_setting">设置</string>
-    <string name="nav_schedule">记录</string>
-    <string name="nav_info">其它工具</string>
-    <string name="nav_exit">退出</string>
+    <string name="nav_setting">Settings</string>
+    <string name="nav_schedule">Record</string>
+    <string name="nav_info">Mobile phone number inquiry(for Chinese number)</string>
+    <string name="nav_exit">Quit</string>
     <!-- button -->
-    <string name="btn_start">开始</string>
-    <string name="btn_pause">暂停</string>
-    <string name="btn_resume">继续</string>
-    <string name="btn_stop">放弃</string>
-    <string name="btn_skip">略过</string>
+    <string name="btn_start">Start</string>
+    <string name="btn_pause">Pause</string>
+    <string name="btn_resume">Continue</string>
+    <string name="btn_stop">Discard</string>
+    <string name="btn_skip">Skip</string>
 
-    <string name="scene_title_work">开始工作</string>
-    <string name="scene_title_break">开始休息</string>
+    <string name="scene_title_work">Start to work</string>
+    <string name="scene_title_break">Have a break</string>
 
-    <string name="scene_work">工作</string>
-    <string name="scene_short_break">短时休息</string>
-    <string name="scene_long_break">长时休息</string>
+    <string name="scene_work"></string>
+    <string name="scene_short_break">have a short break</string>
+    <string name="scene_long_break">have a long break</string>
 
-    <string name="amount_durations">番茄总时间 %1$d 分钟</string>
-    <string name="stage_time_unit">%1$d 分钟</string>
-    <string name="time_unit">分钟</string>
+    <string name="amount_durations">total duration %1$d minutes</string>
+    <string name="stage_time_unit">%1$d minutes</string>
+    <string name="time_unit">minutes</string>
 
     <!-- 通知 -->
-    <string name="notification_focus">番茄工作中</string>
-    <string name="notification_focus_pause">番茄暂停中</string>
-    <string name="notification_break">正在休息</string>
-    <string name="notification_break_pause">休息暂停中</string>
-    <string name="notification_time_left">还剩</string>
-    <string name="notification_finish">放下工作，准备休息</string>
-    <string name="notification_finish_content">已经完成一个番茄钟，休息一下吧！</string>
-    <string name="notification_break_finish">休息结束</string>
-    <string name="notification_break_finish_content">休息结束，开启下一个番茄钟吧！</string>
+    <string name="notification_focus">the tomato clock is at work</string>
+    <string name="notification_focus_pause">the tomato clock is at pause</string>
+    <string name="notification_break">having a break</string>
+    <string name="notification_break_pause">having a pause</string>
+    <string name="notification_time_left">remaining</string>
+    <string name="notification_finish">Finish work and get ready to rest</string>
+    <string name="notification_finish_content">One tomato clock completed, take a break!</string>
+    <string name="notification_break_finish">Break is over</string>
+    <string name="notification_break_finish_content">Break is over, start the next tomato clock!</string>
 
-    <!-- 设置 -->
-    <string name="pref_title_tick_title">定时器设置</string>
-    <string name="pref_title_work_length">工作时长</string>
-    <string name="pref_title_short_break">休息时长</string>
-    <string name="pref_title_long_break">长休息时长</string>
-    <string name="pref_title_long_break_frequency">长休息间隔</string>
-    <string name="pref_title_frequency_value">%1$d 个番茄</string>
-    <string name="pref_title_time_value">%1$d 分钟</string>
+    <!-- Setting -->
+    <string name="pref_title_tick_title">Timer setting</string>
+    <string name="pref_title_work_length">Work duration</string>
+    <string name="pref_title_short_break">Break duration</string>
+    <string name="pref_title_long_break">Long break duration</string>
+    <string name="pref_title_long_break_frequency">Long break interval</string>
+    <string name="pref_title_frequency_value">%1$d tomatoes</string>
+    <string name="pref_title_time_value">%1$d minutes</string>
 
-    <string name="pref_title_pomodoro_element">番茄元素</string>
-    <string name="pref_title_pomodoro_mode">番茄模式</string>
-    <string name="pref_title_pomodoro_mode_summary">在番茄模式下不能暂停定时器</string>
-    <string name="pref_title_infinity_mode">自动模式</string>
-    <string name="pref_title_infinity_mode_summary">自动开始下一个番茄钟</string>
-    <string name="pref_title_ticking_sound">滴答声</string>
-    <string name="pref_title_ticking_sound_summary">在番茄钟工作期间，持续的滴答声</string>
+    <string name="pref_title_pomodoro_element">Tomato elements</string>
+    <string name="pref_title_pomodoro_mode">Tomato mode</string>
+    <string name="pref_title_pomodoro_mode_summary">Timer cannot be paused in tomato mode</string>
+    <string name="pref_title_infinity_mode">Automatic mode</string>
+    <string name="pref_title_infinity_mode_summary">Automatically start the next tomato clock</string>
+    <string name="pref_title_ticking_sound">Tick sound</string>
+    <string name="pref_title_ticking_sound_summary">Continuous ticking sound during tomato clock work</string>
 
-    <string name="pref_title_notifications">提示</string>
-    <string name="pref_title_use_notification">完成后提示</string>
-    <string name="pref_title_notification_sound">提示音</string>
-    <string name="pref_title_notification_vibrate">震动</string>
+    <string name="pref_title_notifications">Notifications</string>
+    <string name="pref_title_use_notification">Notification after completion</string>
+    <string name="pref_title_notification_sound">Notification sound</string>
+    <string name="pref_title_notification_vibrate">Vibration</string>
 
-    <string name="pref_title_advanced">高级</string>
-    <string name="pref_title_screen_on">屏幕常亮</string>
-    <string name="pref_title_screen_on_summary">仅针对主界面，在番茄钟期间保持屏幕常亮</string>
-    <string name="pref_title_check_update">检查更新</string>
-    <string name="check_update_connected_failed">无法连接网络</string>
-    <string name="check_update_connected_error">网络连接异常，请稍后再试</string>
-    <string name="check_update_checking">正在检查更新</string>
-    <string name="check_update_new_version">发现新版本</string>
-    <string name="check_update_last_version">已经是最新版本</string>
-    <string name="check_update_message">版本号: %1$s\n\n版本说明:\n%2$s</string>
-    <string name="check_update_update_now">立即更新</string>
-    <string name="check_update_update_later">稍后更新</string>
+    <string name="pref_title_advanced">Advanced</string>
+    <string name="pref_title_screen_on">Keep screen on</string>
+    <string name="pref_title_screen_on_summary">Only for the main interface, keep the screen on during the tomato clock</string>
+    <string name="pref_title_check_update">Check for updates</string>
+    <string name="check_update_connected_failed">Failed to connect to the network</string>
+    <string name="check_update_connected_error">Network connection error, please try again later</string>
+    <string name="check_update_checking">Checking for updates</string>
+    <string name="check_update_new_version">New version found</string>
+    <string name="check_update_last_version">Already the latest version</string>
+    <string name="check_update_message">Version: %1$s\n\nDescription:\n%2$s</string>
+    <string name="check_update_update_now">Update now</string>
+    <string name="check_update_update_later">Update later</string>
     <string name="check_update_mobile_network">
-        "当前处于移动网络环境下，"
-        "继续使用可能产生流量，请确认是否继续？"
+        "Currently in a mobile network environment,"
+        "Continuing to use may generate traffic, please confirm whether to continue?"
     </string>
-    <string name="check_update_get_info_failed">获取版本信息失败，请重试</string>
+    <string name="check_update_get_info_failed">Failed to get version information, please try again</string>
 
-    <string name="schedule_today_title">今日数据</string>
-    <string name="schedule_amount_title">累计数据</string>
-    <string name="schedule_durations">番茄时间</string>
-    <string name="schedule_times">番茄次数</string>
-    <string name="schedule_done">完成次数</string>
-    <string name="schedule_amount_summary">注意：卸载应用，累计数据将重新计算!</string>
+    <string name="schedule_today_title">Today\'s Data</string>
+    <string name="schedule_amount_title">Accumulated Data</string>
+    <string name="schedule_durations">Tomato Time</string>
+    <string name="schedule_times">Tomato Count</string>
+    <string name="schedule_done">Completion Count</string>
+    <string name="schedule_amount_summary">Note: Uninstalling the app will reset the accumulated data!</string>
 
     <string name="info_version">%1$s v%2$s</string>
-    <string name="info_description">
-    </string>
+    <string name="info_description"></string>
     <string name="info_about_title"></string>
     <string name="info_contact_us"></string>
     <string name="info_email_title"></string>
@@ -93,8 +92,9 @@
     <string name="info_website_title"></string>
     <string name="info_site">h/</string>
 
-    <string name="toast_tick_sound_on">滴答声已开启</string>
-    <string name="toast_tick_sound_off">滴答声已关闭</string>
-    <string name="navigation_drawer_open">打开导航栏</string>
-    <string name="navigation_drawer_close">关闭导航栏</string>
+    <string name="toast_tick_sound_on">Tick sound is turned on</string>
+    <string name="toast_tick_sound_off">Tick sound is turned off</string>
+    <string name="navigation_drawer_open">Open Navigation Drawer</string>
+    <string name="navigation_drawer_close">Close Navigation Drawer</string>
+
 </resources>
